set default http client timeout to 10 secs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ IF(COMPILE_STUBGEN)
 ENDIF()
 
 #the examples
-IF(COMPILE_EXAMPLES AND HTTP_SERVER_MONGOOSE AND HTTP_CLIENT_CURL)
+IF(COMPILE_EXAMPLES AND HTTP_SERVER AND HTTP_CLIENT)
     add_subdirectory(src/examples)
 ENDIF()
 
