--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ compiler:
 
 script: 
     - mkdir -p build && cd build
-    - cmake -DSOCKET_SERVER=${SOCKET_SERVER} -DSOCKET_CLIENT=${SOCKET_CLIENT} -DHTTP_CLIENT=${HTTP_CLIENT} -DHTTP_SERVER=${HTTP_SERVER} -DCOMPILE_STUBGEN=${COMPILE_STUBGEN} .. 
+    - cmake -DCMAKE_BUILD_TYPE=Debug -DSOCKET_SERVER=${SOCKET_SERVER} -DSOCKET_CLIENT=${SOCKET_CLIENT} -DHTTP_CLIENT=${HTTP_CLIENT} -DHTTP_SERVER=${HTTP_SERVER} -DCOMPILE_STUBGEN=${COMPILE_STUBGEN} .. 
     - make
     - valgrind --leak-check=full --error-exitcode=1 ./bin/unit_testsuite
     - make test
