--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,17 @@ language: cpp
 
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq libcurl4-openssl-dev libjsoncpp-dev libargtable2-dev libboost-test-dev libmicrohttpd-dev valgrind
+ - sudo apt-get install -qq libcurl4-openssl-dev libjsoncpp-dev libargtable2-dev libboost-test-dev libgnutls-dev libgcrypt11-dev dpkg-dev devscripts valgrind
+ - sudo apt-get source libmicrohttpd
+ - cd libmicrohttpd-0.4.6
+ - debuild -us -uc
+ - sudo dpkg -i ../libmicrohttpd5_0.4.6-1_amd64.deb ../libmicrohttpd-dev_0.4.6-1_amd64.deb
  - sudo pip install cpp-coveralls
 
 
 env:
- - SOCKET_SERVER=NO SOCKET_CLIENT=NO HTTP_SERVER=YES HTTP_CLIENT=YES COMPILE_STUBGEN=YES
- - SOCKET_SERVER=YES SOCKET_CLIENT=YES HTTP_SERVER=YES HTTP_CLIENT=YES COMPILE_STUBGEN=YES
- - SOCKET_SERVER=YES SOCKET_CLIENT=YES HTTP_SERVER=YES HTTP_CLIENT=YES COMPILE_STUBGEN=NO
+ - HTTP_SERVER=YES HTTP_CLIENT=YES COMPILE_STUBGEN=YES
+ - HTTP_SERVER=NO HTTP_CLIENT=NO COMPILE_STUBGEN=NO
 
 
 compiler:
@@ -18,7 +21,7 @@ compiler:
 
 script: 
     - mkdir -p build && cd build
-    - cmake -DCMAKE_BUILD_TYPE=Debug -DSOCKET_SERVER=${SOCKET_SERVER} -DSOCKET_CLIENT=${SOCKET_CLIENT} -DHTTP_CLIENT=${HTTP_CLIENT} -DHTTP_SERVER=${HTTP_SERVER} -DCOMPILE_STUBGEN=${COMPILE_STUBGEN} .. 
+    - cmake -DCMAKE_BUILD_TYPE=Debug -DHTTP_CLIENT=${HTTP_CLIENT} -DHTTP_SERVER=${HTTP_SERVER} -DCOMPILE_STUBGEN=${COMPILE_STUBGEN} .. 
     - make
     - valgrind --leak-check=full --error-exitcode=1 ./bin/unit_testsuite
     - make test
