--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: cpp
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq libcurl4-openssl-dev libjsoncpp-dev libargtable2-dev libboost-test-dev libgnutls-dev libgcrypt11-dev dpkg-dev devscripts quilt valgrind
- - sudo apt-get source libmicrohttpd
+ - apt-get source libmicrohttpd
  - cd libmicrohttpd-0.4.6
  - debuild -us -uc
  - sudo dpkg -i ../libmicrohttpd5_0.4.6-1_amd64.deb ../libmicrohttpd-dev_0.4.6-1_amd64.deb
