--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
  - debuild -us -uc
  - sudo dpkg -i ../libmicrohttpd5_0.4.6-1_amd64.deb ../libmicrohttpd-dev_0.4.6-1_amd64.deb
  - sudo pip install cpp-coveralls
+ - cd .. && sudo rm -rf *
 
 
 env:
