--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ language: cpp
 
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq libcurl4-openssl-dev libjsoncpp-dev libargtable2-dev libboost-test-dev libgnutls-dev libgcrypt11-dev dpkg-dev devscripts quilt valgrind
- - apt-get source libmicrohttpd
- - cd libmicrohttpd-0.4.6
- - debuild -us -uc
- - sudo dpkg -i ../libmicrohttpd5_0.4.6-1_amd64.deb ../libmicrohttpd-dev_0.4.6-1_amd64.deb
- - sudo pip install cpp-coveralls
+ - sudo apt-get install -qq libcurl4-openssl-dev libjsoncpp-dev libargtable2-dev libboost-test-dev libgnutls-dev libgcrypt11-dev valgrind wget
+ - wget ftp://ftp.gnu.org/gnu/libmicrohttpd/libmicrohttpd-0.9.38.tar.gz
+ - tar -xvf libmicrohttpd-0.9.38.tar.gz
+ - cd libmicrohttpd-0.9.38
+ - ./configure && make
+ - sudo make install && sudo ldconfig
  - cd ..
-
+ - sudo pip install cpp-coveralls
 
 env:
  - HTTP_SERVER=YES HTTP_CLIENT=YES COMPILE_STUBGEN=YES
