--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -3,9 +3,13 @@ message(STATUS "Found Bosst Unit Suite -> Enabling test cases")
 set(CTEST_OUTPUT_ON_FAILURE TRUE)
 
 file(GLOB_RECURSE test_source *.cpp)
+file(GLOB test_specs *.json)
 
 file(COPY ${CMAKE_SOURCE_DIR}/src/examples/server.key ${CMAKE_SOURCE_DIR}/src/examples/server.pem DESTINATION ${CMAKE_BINARY_DIR})
 file(COPY ${CMAKE_SOURCE_DIR}/src/examples/server.key ${CMAKE_SOURCE_DIR}/src/examples/server.pem DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+file(COPY ${test_specs} DESTINATION ${CMAKE_BINARY_DIR})
+file(COPY ${test_specs} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+
 
 IF(HTTP_CLIENT AND HTTP_SERVER)
     add_definitions(-DHTTP_TESTING)
@@ -23,7 +27,7 @@ target_link_libraries(unit_testsuite ${Boost_LIBRARIES} jsonrpccommon jsonrpccli
 
 ADD_TEST(client ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite --run_test=client)
 ADD_TEST(server ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite --run_test=server)
-ADD_TEST(common ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite --run_test=common)
+ADD_TEST(NAME common WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite --run_test=common)
 IF(HTTP_CLIENT AND HTTP_SERVER)
     ADD_TEST(NAME connector_http WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite --run_test=connector_http )
 ENDIF()
