--- a/src/stubgenerator/CMakeLists.txt
+++ b/src/stubgenerator/CMakeLists.txt
@@ -1,8 +1,15 @@
 file(GLOB_RECURSE jsonrpcstub_source *.cpp)
+file(GLOB_RECURSE libstubgen_source *.cpp)
+list(REMOVE_ITEM libstubgen_source main.cpp)
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
 
 find_package(Argtable REQUIRED)
+
+IF(COMPILE_TESTS)
+    add_library(stubgen STATIC ${libstubgen_source})
+    target_link_libraries(stubgen jsonrpccommon ${ARGTABLE_LIBRARIES})
+ENDIF()
 
 add_executable(jsonrpcstub ${jsonrpcstub_source})
 target_link_libraries(jsonrpcstub jsonrpccommon ${ARGTABLE_LIBRARIES})
