added integration test

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -11,20 +11,21 @@ file(COPY ${test_specs} DESTINATION ${CMAKE_BINARY_DIR})
 file(COPY ${test_specs} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 
 set(testlibs ${Boost_LIBRARIES} jsonrpccommon jsonrpcclient jsonrpcserver)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
 
 IF(HTTP_CLIENT AND HTTP_SERVER)
     add_definitions(-DHTTP_TESTING)
-ENDIF()
-
-IF(SOCKET_SERVER AND SOCKET_CLIENT)
-    add_definitions(-DTCPSOCKET_TESTING)
 ENDIF()
 
 IF(COMPILE_STUBGEN)
     add_definitions(-DSTUBGEN_TESTING)
 ENDIF()
 
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
+IF(HTTP_CLIENT AND HTTP_SERVER AND COMPILE_STUBGEN)
+    add_definitions(-DINTEGRATION_TESTING)
+    INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
+ENDIF()
+
 IF(WIN32)
     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
     LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
@@ -45,6 +46,10 @@ IF(HTTP_CLIENT AND HTTP_SERVER)
 ENDIF()
 IF(COMPILE_STUBGEN)
     ADD_TEST(NAME stubgen WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite --run_test=stubgenerator)
+ENDIF()
+IF(HTTP_CLIENT AND HTTP_SERVER AND COMPILE_STUBGEN)
+    ADD_TEST(NAME integration WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite --run_test=integration)
+
 ENDIF()
 
 ADD_TEST(NAME all WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite)
