--- a/src/stubgenerator/CMakeLists.txt
+++ b/src/stubgenerator/CMakeLists.txt
@@ -16,9 +16,9 @@ target_link_libraries(jsonrpcstub jsonrpccommon ${ARGTABLE_LIBRARIES})
 
 #Generate manpage
 IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    configure_file("${CMAKE_SOURCE_DIR}/doc/manpage.in" "${CMAKE_BINARY_DIR}/manpage" @ONLY)
     add_custom_command(OUTPUT jsonrpcstub.1.gz
-                   COMMAND gzip -c ${CMAKE_SOURCE_DIR}/doc/manpage > ${CMAKE_BINARY_DIR}/jsonrpcstub.1.gz
-                   MAIN_DEPENDENCY ${CMAKE_SOURCE_DIR}/doc/manpage
+                   COMMAND gzip -c "${CMAKE_BINARY_DIR}/manpage" > ${CMAKE_BINARY_DIR}/jsonrpcstub.1.gz
                    COMMENT "Generating man pages"
                    VERBATIM)
 
