reogranized boost test includes

--- a/src/stubgenerator/CMakeLists.txt
+++ b/src/stubgenerator/CMakeLists.txt
@@ -1,11 +1,12 @@
 file(GLOB_RECURSE jsonrpcstub_source *.cpp)
 file(GLOB_RECURSE libstubgen_source *.cpp)
-list(REMOVE_ITEM libstubgen_source main.cpp)
-
+list(REMOVE_ITEM libstubgen_source "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
 
 find_package(Argtable REQUIRED)
 
 IF(COMPILE_TESTS)
+    message("Foo: ${libstubgen_source}")
+
     add_library(stubgen STATIC ${libstubgen_source})
     target_link_libraries(stubgen jsonrpccommon ${ARGTABLE_LIBRARIES})
 ENDIF()
