temporary fix for include_directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,13 @@ SET(COMPILE_TESTS YES CACHE BOOL "Compile test framework")
 SET(COMPILE_STUBGEN YES CACHE BOOL "Compile the stubgenerator")
 SET(COMPILE_EXAMPLES YES CACHE BOOL "Compile example programs")
 
+# TODO that's very ugly
+# include XXX_INCLUDE_DIRS instead!
+include_directories(${CMAKE_PREFIX_PATH}/include)
+
 IF(WIN32)
+# TODO that's even more ugly
+# maybe use cmake external dependencies instead
 	include_directories(${CMAKE_SOURCE_DIR}/win32-deps/include)
 	SET(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR}/dist)
         SET(BOOST_ROOT "C:/boost_1_57_0")
