fixed library build order in msvc

--- a/src/jsonrpccpp/CMakeLists.txt
+++ b/src/jsonrpccpp/CMakeLists.txt
@@ -72,6 +72,7 @@ set_target_properties(jsonrpccommon PROPERTIES OUTPUT_NAME jsonrpccpp-common)
 
 add_library(jsonrpcclient SHARED ${jsonrpc_source_client} ${jsonrpc_header} ${jsonrpc_header_client} ${client_connector_source})
 add_library(jsonrpcclientStatic STATIC ${jsonrpc_source_client} ${jsonrpc_header} ${jsonrpc_header_client} ${client_connector_source})
+add_dependencies(jsonrpcclient jsonrpccommonStatic)
 target_link_libraries(jsonrpcclient jsonrpccommon ${client_connector_libs})
 target_link_libraries(jsonrpcclientStatic jsonrpccommonStatic ${client_connector_libs})
 set_target_properties(jsonrpcclientStatic PROPERTIES OUTPUT_NAME jsonrpccpp-client)
@@ -80,6 +81,7 @@ set_target_properties(jsonrpcclient PROPERTIES OUTPUT_NAME jsonrpccpp-client)
 
 add_library(jsonrpcserver SHARED ${jsonrpc_source_server} ${jsonrpc_header} ${jsonrpc_header_server} ${server_connector_source})
 add_library(jsonrpcserverStatic STATIC ${jsonrpc_source_server} ${jsonrpc_header} ${jsonrpc_header_server} ${server_connector_source})
+add_dependencies(jsonrpcserver jsonrpccommonStatic)
 target_link_libraries(jsonrpcserver jsonrpccommon ${server_connector_libs})
 target_link_libraries(jsonrpcserverStatic jsonrpccommonStatic ${server_connector_libs})
 set_target_properties(jsonrpcserverStatic PROPERTIES OUTPUT_NAME jsonrpccpp-server)
